# sdk-typescript

./: .env  .gitignore  AGENTS.md  COMPATIBILITY.MD  CONTRIBUTING.md  Cargo.toml  LICENSE.MIT  PR.md  README.md  bug-bash.md  eslint.config.js  justfile  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  reading-guide.md  setup-aws-oidc.sh  test.ts  tsconfig.json  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: v1.yml
.github/agent-scripts/: README.md  project-manager.script.md  task-implementer.script.md  task-reviewer.script.md
.github/agent-sops/: task-implementer.sop.md  task-refiner.sop.md  task-reviewer.sop.md
.github/config/: automation-config.json
.github/scripts/: agent_runner.py  create_subagent.py  fetch_github_tool.py  gist.py  github_tools.py  requirements.txt  store_in_kb.py  system_prompt.py  use_github.py
.github/workflows/: auto-strands-review.yml  code-quality.yml  integration-test.yml  issue-metadata-automation.yml  npm-publish-on-release.yml  pr-and-push.yml  project-manager-agent.yml  project_manager_agent.yml  py-check.yml  security-audit.yml  strands-agent-runner.yml  strands-command.yml  task-implementer-agent.yml  task-reviewer-agent.yml  task_implementer_agent.yml  task_reviewer_agent.yml  test-lint.yml  test-package-pack.yml  test.yml  typescript-integration-test.yml  typescript-pr-and-push.yml
.github_temp/: README.md
.github_temp/workflows/: test-lint.yml
.husky/: commit-msg  pre-commit
.kiro/settings/: lsp.json
.project/: task-registry.md
.project/decisions/: tool-decorator-architecture.md
.project/tasks/: task-01-setup-project-structure-and-core-type-system.md  task-03-implement-aws-bedrock-model-provider.md  task-04-implement-openai-model-provider.md  task-06-create-tool-decorator-system.md  task-06.2-implement-tool-helper-function.md  task-07-create-tool-registry.md  task-08-implement-agentic-loop-and-async-processing.md
.ralph/: events.jsonl
bug-bash/: README.md
bug-bash/guides/: agent-a2a.md  agent-loop.md  agent-structured-output.md  conversation-management.md  models-anthropic.md  models-bedrock.md  models-google.md  models-openai.md  multi-agents-graph.md  multi-agents-swarm.md  plugins.md  sessions.md  telemetry.md  tools-bash.md  tools-file-editor.md  tools-http-request.md  tools-mcp.md  tools-notebook.md  tools.md
bug-bash/templates/: agent-a2a.ts  agent-loop.ts  agent-structured-output.ts  conversation-management.ts  mcp-server.ts  models-anthropic.ts  models-bedrock.ts  models-google.ts  models-openai.ts  multi-agents-graph.ts  multi-agents-swarm.ts  plugins.ts  sessions.ts  telemetry.ts  tools-bash.ts  tools-file-editor.ts  tools-http-request.ts  tools-mcp.ts  tools-notebook.ts  tools.ts
docs/: DEMO.md  DEPENDENCIES.md  PR.md  TESTING.md  design-proposal.md  feature-availability.md  team-decisions.md
examples/: README.md  session-with-immutable-snapshots.ts  simple-session-example.ts
examples/browser-agent/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
examples/browser-multi-agent-stream/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  (+3 more)
filament-cli/: Cargo.toml  build.rs
filament-cli/src/: build.rs  new.rs
filament-core/: Cargo.toml
filament-core/src/: runtime.rs
filament-core/src/loader/: wasmtime.rs
filament-sdk-rs/: Cargo.toml
src/: agent.ts  app-state.ts  errors.ts  hello.ts  index.ts  index.ts.bak  interrupt.ts  mcp-client.ts  mcp.ts  user-state.ts
strandly/: package.json
strands-derive/: Cargo.toml
strands-derive/src/: lib.rs
strands-dev/: package.json
strands-filament/: package.json
strands-metrics/: Cargo.toml
strands-metrics/src/: aggregates.rs  client.rs  main.rs
strands-native-rs/: Cargo.toml  README.md
strands-native-rs/examples/: custom_tool.rs  hello_strands.rs  mcp.rs
strands-native-rs/src/: agent.rs  error.rs  lib.rs  mcp_client.rs  message.rs  state_provider.rs  tool.rs
strands-native-rs/src/model/: anthropic.rs  mod.rs  model_provider.rs
strands-py/: README.md  pyproject.toml  pyrightconfig.json
strands-py-wasm/: pyproject.toml
strands-py/examples/: calculator.py
strands-py/scripts/: generate_types.py
strands-py/strands/: __init__.py  _conversions.py  _strands.pyi  _wasm_host.py  hooks.py  interrupt.py
strands-py/strands/_generated/: __init__.py
strands-py/strands/agent/: __init__.py
strands-py/strands/agent/conversation_manager/: __init__.py  sliding_window_conversation_manager.py  summarizing_conversation_manager.py
strands-py/strands/event_loop/: __init__.py  _retry.py
strands-py/strands/models/: __init__.py  _validation.py  anthropic.py  bedrock.py  gemini.py  host_adapter.py  model.py  openai.py  sagemaker.py
strands-py/strands/multiagent/: __init__.py  base.py  graph.py  swarm.py
strands-py/strands/session/: __init__.py  file_session_manager.py  s3_session_manager.py
strands-py/strands/tools/: __init__.py  decorator.py
strands-py/strands/tools/mcp/: __init__.py  mcp_client.py  mcp_types.py
strands-py/strands/types/: __init__.py  content.py  exceptions.py  tools.py
strands-py/tests/: test_hook_provider_stubs.py
strands-py/tests_integ/: test_multiagent_swarm.py  test_structured_output_agent_loop.py
strands-py/tests_integ/hooks/: test_lifecycle_bridge.py
strands-rs/: Cargo.toml
strands-rs/examples/: multi_stream.rs
strands-rs/src/: lib.rs  python.rs  uniffi_bridge.rs
strands-ts/: eslint.config.js  package.json  tsconfig.base.json  vitest.config.ts
strands-wasm/: README.md  build.js  entry.ts  package.json  vitest.config.ts
test-package/: package.json  verify.js
tests/: hello.test.ts  index.test.ts
tests_integ/: agent-browser.test.ts  agent.test.ts  bash.test.ts  bedrock.test.ts  environment.test.ts  file-editor.test.ts  hooks.test.ts  http-request.test.ts  integ-setup.ts  mcp.test.ts  metrics.test.ts  notebook.test.ts  openai.test.ts  registry.test.ts  setup.test.ts
vendedTools/: README.md
vended_tools/: README.md
wit/: agent.wit  messages.wit
(+821 files in other folders)
