[package]
name = "filament-cli"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[[bin]]
name = "filament"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
clap.workspace = true
cliclack.workspace = true
filament = { workspace = true, default-features = true, features = ["serde"] }
flate2.workspace = true
hex.workspace = true
sha2.workspace = true
tar.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal", "sync"] }
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
wasm-encoder.workspace = true

[build-dependencies]
anyhow.workspace = true
flate2.workspace = true
serde_json.workspace = true
tar.workspace = true
toml.workspace = true

[lints]
workspace = true
