[package]
name = "filament"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = true
repository.workspace = true
version.workspace = true

[lib]
crate-type = ["rlib", "cdylib"]

[features]
default = ["native"]
napi = []
native = ["wasmtime"]
serde = ["dep:serde"]
uniffi = []
wasmtime = ["dep:toml", "dep:wasmparser", "dep:wasmtime", "dep:wasmtime-wasi", "dep:wasmtime-wasi-http", "dep:tokio", "serde"]
web = ["dep:wasm-bindgen", "dep:js-sys", "dep:web-sys", "dep:wasm-bindgen-futures", "dep:serde-wasm-bindgen"]

[dependencies]
async-trait.workspace = true
dashmap.workspace = true
js-sys = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde-wasm-bindgen = { workspace = true, optional = true }
thiserror.workspace = true
tokio = { workspace = true, optional = true, features = ["rt", "sync"] }
toml = { workspace = true, optional = true }
tracing.workspace = true
wasm-bindgen = { workspace = true, optional = true }
wasm-bindgen-futures = { workspace = true, optional = true }
wasmparser = { workspace = true, optional = true }
wasmtime = { workspace = true, optional = true }
wasmtime-wasi = { workspace = true, optional = true }
wasmtime-wasi-http = { workspace = true, optional = true }
web-sys = { workspace = true, optional = true }

[lints]
workspace = true
