[package]
name = "strands-derive"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn = { workspace = true, features = ["full", "extra-traits"] }

[lints]
workspace = true
