[package]
name = "strands-metrics"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
http.workspace = true
indicatif.workspace = true
octocrab.workspace = true
pyo3-introspection.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
