[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "strands"
version = "0.0.1"
description = "Python host for the Strands Agent WASM component"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pydantic>=2.0",
    "docstring-parser>=0.16",
    "boto3>=1.35",
    "tenacity>=8.0",
]

[tool.maturin]
manifest-path = "../strands-rs/Cargo.toml"
features = ["pyo3/extension-module"]
python-source = "."
module-name = "strands._strands"

[tool.pytest.ini_options]
testpaths = ["tests_integ"]
asyncio_mode = "auto"
cache_dir = ".pytest_cache"

[tool.ruff]
exclude = ["strands/generated"]
