[package]
name = "strands"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = []
pyo3 = ["dep:pyo3", "dep:pyo3-async-runtimes", "dep:tokio", "dep:tracing-subscriber"]
uniffi = ["dep:uniffi"]

[dependencies]
anyhow.workspace = true
async-stream.workspace = true
futures-core.workspace = true
pyo3 = { workspace = true, optional = true }
pyo3-async-runtimes = { workspace = true, optional = true }
serde_json.workspace = true
strands-derive.workspace = true
tokio = { workspace = true, optional = true, features = ["macros", "rt-multi-thread", "sync"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, optional = true }
uniffi = { workspace = true, optional = true }
wasmtime = { workspace = true, features = ["component-model", "async"] }
wasmtime-wasi.workspace = true
wasmtime-wasi-http.workspace = true

[build-dependencies]
anyhow.workspace = true
wasmtime = { workspace = true, features = ["component-model", "async"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }
tokio-stream.workspace = true

[[example]]
name = "anthropic"
path = "examples/anthropic.rs"

[[example]]
name = "chat"
path = "examples/chat.rs"

[[example]]
name = "multi_turn"
path = "examples/multi_turn.rs"

[[example]]
name = "session"
path = "examples/session.rs"

[[example]]
name = "tools"
path = "examples/tools.rs"

[lints]
workspace = true
